envoy-direct.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    connection_balance_config:
      exact_balance: { }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                direct_response:
                  status: 200
          http_filters:
          - name: envoy.filters.http.router
admin:
  access_log_path: "/dev/null"
  profile_path: "/tmp/envoy.prof"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000
